tests/sawn/fixtures/invalid/02_array_without_brackets.sawn
// INVALID: Array-like children under a bare key (no [] or {})
items
  "sword"
  "potion"
